fixed video overflow issue

--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -19,7 +19,8 @@
   align-items: center;
 }
 .box video {
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
+  z-index: -1;
   width: 150%;
   min-height: 100%;
   object-fit: cover;
